<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>pom</packaging>
    <groupId>oap</groupId>
    <artifactId>oap.maven</artifactId>
    <version>${oap.maven.project.version}</version>
    <organization>
        <name>Open Application Platform</name>
        <url>http://oaplatform.org</url>
    </organization>

    <properties>
        <oap.maven.project.version>17.3.6.1</oap.maven.project.version>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <build.counter>1</build.counter>
        <oap.deps.maven.surefire.version>3.0.0-M5</oap.deps.maven.surefire.version>
        <oap.deps.maven.surefire.forkCount>1</oap.deps.maven.surefire.forkCount>
        <oap.deps.maven.surefire.docker_cpu>4</oap.deps.maven.surefire.docker_cpu>
        <oap.deps.maven.checkstyle.version>3.2.0</oap.deps.maven.checkstyle.version>
        <oap.deps.checkstyle.version>8.45.1</oap.deps.checkstyle.version>
        <oap.deps.maven.source.version>3.2.1</oap.deps.maven.source.version>
        <oap.deps.maven.flatten.version>1.2.2</oap.deps.maven.flatten.version>
        <oap.deps.maven.jar.version>3.2.2</oap.deps.maven.jar.version>
        <oap.deps.maven.compiler.version>3.8.0</oap.deps.maven.compiler.version>
        <oap.deps.maven.enforcer.version>3.1.0</oap.deps.maven.enforcer.version>
        <min.maven.version>3.6.3</min.maven.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${oap.deps.maven.compiler.version}</version>
                <configuration>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>--add-modules</arg>
                        <arg>java.xml,java.compiler</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${oap.deps.maven.jar.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${oap.deps.maven.surefire.version}</version>
                <configuration>
                    <argLine>
                        -XX:ActiveProcessorCount=${oap.deps.maven.surefire.docker_cpu}
                        -ea
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.math=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.stream=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.text=ALL-UNNAMED
                        --add-opens=java.sql/java.sql=ALL-UNNAMED
                    </argLine>
                    <forkCount>${oap.deps.maven.surefire.forkCount}</forkCount>
                    <!-- Activate the use of TCP to transmit events to the plugin -->
                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
                    <reuseForks>true</reuseForks>
                    <trimStackTrace>false</trimStackTrace>
                    <testFailureIgnore>true</testFailureIgnore>
                    <useFile>true</useFile>
                    <disableXmlReport>false</disableXmlReport>
                    <printSummary>true</printSummary>
                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <runOrder>balanced</runOrder>
                    <includes>
                        <include>**/*Test.*</include>
                    </includes>
                    <excludes>
                        <exclude>**/*Performance.*</exclude>
                        <exclude>**/*Perf.*</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${oap.deps.maven.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${oap.deps.maven.flatten.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${oap.deps.maven.checkstyle.version}</version>
                <configuration>
                    <configLocation>https://raw.githubusercontent.com/oaplatform/oap-maven/master/.idea/checkstyle.xml</configLocation>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                    <sourceDirectories>
                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                        <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
                    </sourceDirectories>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${oap.deps.checkstyle.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${oap.deps.maven.enforcer.version}</version>
                <executions>
                    <execution>
                        <id>validate_java_and_maven_version</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <inherited>false</inherited>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[${min.maven.version},4)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[${maven.compiler.source},18)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>performance</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${oap.deps.maven.surefire.version}</version>
                        <configuration>
                            <argLine>
                                -XX:ActiveProcessorCount=${oap.deps.maven.surefire.docker_cpu}
                                -ea
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                                --add-opens=java.base/java.math=ALL-UNNAMED
                                --add-opens=java.base/java.util=ALL-UNNAMED
                                --add-opens=java.base/java.util.stream=ALL-UNNAMED
                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                                --add-opens=java.base/java.net=ALL-UNNAMED
                                --add-opens=java.base/java.text=ALL-UNNAMED
                                --add-opens=java.sql/java.sql=ALL-UNNAMED
                            </argLine>
                            <trimStackTrace>false</trimStackTrace>
                            <testFailureIgnore>true</testFailureIgnore>
                            <useFile>true</useFile>
                            <disableXmlReport>false</disableXmlReport>
                            <printSummary>true</printSummary>
                            <forkedProcessTimeoutInSeconds>9600</forkedProcessTimeoutInSeconds>
                            <forkMode>once</forkMode>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <runOrder>balanced</runOrder>
                            <includes>
                                <include>**/*Performance.*</include>
                                <include>**/*Perf.*</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
